@@ -1,10 +1,10 @@
-/* $Id: TodayFixes,v 1.94 2004/06/24 09:53:32 sisoft Exp $ */
+/* $Id: TodayFixes,v 1.95 2004/06/25 09:46:42 sisoft Exp $ */
 ---
-add lost files slists.[ch].
-remove unused /tmp/qpkt*.pkt's.
+change option '-a'.
+remove stuff/fts-001.
 .
 previous:
 ---
-now show remote time in node info again (was buggy local).
-add support for defines in config (see conf.sample).
+add lost files slists.[ch].
+remove unused /tmp/qpkt*.pkt's.
 .
