@@ -1,4 +1,3 @@
-stuff/fts-0001
 stuff/onchat
 stuff/sfreq
 stuff/synctime
