@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-24 13:50";
+char cvsdate[]="2004-06-25 14:42";
