@@ -1,5 +1,5 @@
-# $Id: Makefile.am,v 1.7 2004/06/13 17:05:46 sisoft Exp $
-EXTRA_DIST = fts-0001 ftn qico.xpm sfreq onchat synctime tossing \
+# $Id: Makefile.am,v 1.8 2004/06/25 09:46:42 sisoft Exp $
+EXTRA_DIST = ftn qico.xpm sfreq onchat synctime tossing \
 	     qhistory qlinks stat.run koi8r_866.cp test.pl \
 	     freebsd/Makefile freebsd/pkg-descr \
 	     freebsd/pkg-plist freebsd/pkg-install
